Fix block clipping bug - with blockly scrollbars

--- a/addons/debug-tab/style.css
+++ b/addons/debug-tab/style.css
@@ -3,15 +3,34 @@
     overflow-y: auto;
     /*max-height: 87vh;*/
     height: 50px;
-    min-width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     padding: 18px;
+}
+.sa-debugger table#opcode-debug {
+    width: 100%;
+    table-layout: fixed;
+}
+.sa-debugger .sa-debug-table-wrapper {
+    width: 100%;
+    overflow-x: auto;
 }
 .sa-debugger .sa-debug-row {
     min-width: 100%;
+    overflow-x: scroll;
     margin: 18px;
 }
-.sa-debugger .sa-debug-col:not(:first-child) {
-    margin-left: 10px;
+.sa-debugger .sa-debug-col.sa-table-text {
+    padding: 5px;
+    padding-bottom: 56px;
+}
+.sa-debugger .sa-debug-col:not(.sa-table-text) {
+    /* display: inline-block;
+    width: 100%; */
+}
+.sa-debugger .injectionDiv {
+    width: 100%;
+    height: 100%;
 }
 .sa-table-text {
     text-align: center;
